[package]
name = "epoxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6.0"
sqlx = { version = "0.5", features = [ "runtime-actix-native-tls" , "postgres", "chrono" ] }
chrono = "0.4"
log = "0.4.17"
env_logger = "0.9.0"
